# hpp-2024

./: README.md  pyproject.toml
hpp_2024/assynk/: a.py  breakfast.py  breakfast_Natan.py  ref_heater_impl.py  summary.py
hpp_2024/assynk/game_of_life/: life_1_0.py  life_cuda.py  life_numpy.py  life_tests.py  live_1_0.py  numpy_basics.py  numpy_sin.py
hpp_2024/assynk/starship/: a.py  model.py  ship_tests.py  simple_runner.py
hpp_2024/basics/: task_a.py  user_repo.py
hpp_2024/mem/: cpu1.py  cpu_runner.py  mem1.py  results.md
hpp_2024/numpy_pytorch/: a.py  collisions.py  np1.py  np_zero.py  simulations.py  vertical_throw.py
hpp_2024/parallel/: .gitignore  a.py  dna_tools.py  frequency_analyzer.py  gg.py  mem_consumption.py  parallel_runner.py  simple_matcher.py  simple_n_matcher.py  simple_shifted_matcher.py  todo.md  utils.py
tests/: conftest.py  test_dna.py  test_users.py
vectors/: a.py  simple_plot.py
