[tool.poetry]
name = "hpp-2024"
version = "0.1.0"
description = ""
authors = ["Piotr Marecki <pmarecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^33.0.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
# to install dev dependencies use: `poetry add --group dev {lib_name}`
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
